<resources>
    <string name="app_name">Cholo Ek Sathe</string>
    <string name="title_activity_login">SignIn</string>
    <string name="title_activity_registration">SignUp</string>
    <string name="category">Category</string>
    <string name="gender">Gender</string>
    <string name="title_activity_driver_main">Home</string>
    <string name="title_activity_passenger_main">Home</string>
    <string name="title_activity_driver_car_setup">Car Setup</string>
    <string name="title_activity_driver_car_sahre">Share a car</string>
    <string name="title_activity_driver_car_share_list">Car Share List</string>
    <string name="title_activity_driver_car_share_list_info">Car Share Info</string>
    <string name="title_activity_passenger_maps">Map</string>
    <string name="title_activity_passenger_find_acar">Request</string>
    <string name="title_activity_passenger_car_list">Car List</string>
    <string name="_goto">Goto?</string>
    <string name="title_activity_passenger_cars_list">Availabel cars</string>
    <string name="title_activity_passenger_interest_show">Interest Show</string>

    <!-- TODO: Map Key for showing google map and places-->
    <string name="map_release_key">AIzaSyDAKfDLZmAdoIbdv04IIt8fNoUFjgccbTQ</string>
    <string name="map_debug_key">AIzaSyCEtwST06K4PJdb3qCgQAPGf3swK8-ZCqg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_settings">Time Settings</string>
    <string name="todo">TODO</string>
    <string name="set_start_time">Set start time</string>
    <string name="time">time</string>
    <string name="set_return_time">Set return time</string>
    <string name="additional_settings">Additional Settings</string>
    <string name="available_sit">Available sit</string>
    <string name="price_per_sit">Price (per sit)</string>
    <string name="luggage_allowed">Luggage allowed</string>
    <string name="smocking_allowed">Smocking allowed</string>
    <string name="food_allowed">Food allowed</string>
    <string name="music_allowed">Music allowed</string>
    <string name="pets_allowed">Pets allowed</string>
    <string name="stop_over">Stop Over</string>
    <string name="request_for_share">Request for share?</string>
    <string name="bio_information">Bio Information</string>
    <string name="smoker">Smoker</string>
    <string name="song_lover">Song Lover</string>
    <string name="call">Call</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="title_activity_driver_car_info_setup">Setup car info</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_passenger_home_page">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tap_to_starting_point">Tap to starting point</string>
    <string name="tap_to_destination_point">Tap to destination point</string>
    <string name="no_available_car_found">No available car found</string>
    <string name="interested">Interested</string>
    <string name="waiting_for_response">Waiting for response...</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="price">Price</string>
    <string name="driver_price">Driver Price</string>
    <string name="comments">Comments</string>
    <string name="driver_requirements">Driver Requirements</string>
    <string name="title_activity_driver_profile_update">Profile</string>
    <string name="profile">Driver Profile</string>
    <string name="car">Car Profile</string>
    <string name="start_journey">Journey Start</string>
    <string name="stop_journey">Journey Stop</string>
    <string name="title_activity_driver_user_profile_update">Update</string>
    <string name="nid">National identification card number</string>
    <string name="dob">Date of Birth</string>
    <string name="address">Address</string>
    <string name="fb_link">Facebook page link</string>
    <string name="home">Home</string>
    <string name="car_info_update">Update</string>
    <string name="title_activity_driver_car_info_update">Update car info</string>
    <string name="car_name">Car Name</string>
    <string name="car_model">Car Model</string>
    <string name="owner_name">Owner Name</string>
    <string name="owner_contact_number">Owner Contact Number</string>
    <string name="details">Details</string>
    <string name="active">Active</string>
    <string name="ac_available">AC Available</string>
    <string name="title_activity_passenger_profile">Profile</string>
    <string name="title_activity_passenger_profile_update">Update Profile</string>
    <string name="title_activity_passenger_history">History</string>
    <string name="no_of_sit">No of sit you want</string>
    <string name="title_activity_password_change">Change password</string>
    <string name="private_share">Private Share</string>
    <string name="public_share">Public Share</string>
    <string name="request_accepted">Accepted</string>
    <string name="request_rejected">Rejected</string>
    <string name="contact_number">Request Call</string>
    <string name="title_activity_driver_navigation">Navigation</string>
    <string name="navigation">Navigation</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="title_activity_driver_current_session">DriverCurrentSessionActivity</string>
    <string name="title_activity_mobile_verification">MobileVerificationActivity</string>
    <string name="password_changes">Welcome to CholoEkSathe mobile app. For the first time you must change your password and it is mandatory for all users.</string>
    <string name="forgot_password_process">To retrive password, must provide your verified email address. Old password has been sent to your email. After enter old password new password setup option will be available.</string>
    <string name="title_activity_paymentwith_rating">PaymentwithRatingActivity</string>
    <string name="set_location_on_map">Set location on map</string>
</resources>
