<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oss_net.choloeksathe.fragments.driver.CarShareSettingsFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dragView"
    android:background="@color/colorApplicationBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/mp_10">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_settings"
            android:typeface="monospace"/>

        <RelativeLayout
            android:id="@+id/startTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mp_5"
            android:layout_marginStart="@dimen/mp_10"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/startTimeImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_date"
                android:layout_marginTop="3dp"
                android:contentDescription="@string/todo" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/startTimeImage"
                android:gravity="center_vertical"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/mp_5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_start_time"/>
                <TextView
                    android:id="@+id/setStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"/>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additional_settings"
            android:typeface="monospace"
            android:layout_marginTop="@dimen/mp_10"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/mp_10"
            android:layout_marginTop="@dimen/mp_5">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilAvailableSit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/available_sit"
                    android:inputType="number"
                    android:drawableStart="@drawable/ic_action_date"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPricePerSit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price_per_sit"
                    android:inputType="numberDecimal"
                    android:drawableStart="@drawable/ic_action_date"/>
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cbLuggageAllow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/luggage_allowed"/>
                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cbSmockingAllow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/smocking_allowed"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cbFoodAllow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/food_allowed"/>
                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cbMusicAllow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/music_allowed"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cbPetAllow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pets_allowed"/>
                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cbStopOver"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stop_over"
                    android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Company Settings"
            android:typeface="monospace"
            android:layout_marginTop="@dimen/mp_10"/>
        <RadioGroup
            android:id="@+id/groupSharing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/privateShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/private_share"/>
            <RadioButton
                android:id="@+id/publicShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/public_share"
                android:checked="true"/>
        </RadioGroup>

        <Button
            android:id="@+id/buttonRequestForShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/request_for_share"
            android:textColor="@color/colorButtonText"
            android:layout_marginStart="@dimen/mp_20"
            android:layout_marginEnd="@dimen/mp_20"
            android:layout_marginTop="@dimen/mp_10"
            android:visibility="gone"/>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
