<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oss_net.choloeksathe.activities.passenger.PassengerHistoryActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/mp_5"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_settings"/>
            <RelativeLayout
                android:id="@+id/startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mp_5"
                android:layout_marginStart="@dimen/mp_10"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/startTimeImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_date"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/todo" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toEndOf="@id/startTimeImage"
                    android:gravity="center_vertical"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/mp_5">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/set_start_time"/>
                    <TextView
                        android:id="@+id/setStartTime"
                        android:layout_width="match_parent"
                        android:text="time"
                        android:layout_height="wrap_content"
                        android:hint="Start Time" />
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/additional_settings"
                android:layout_marginTop="@dimen/mp_5"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mp_10"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/driverPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/driver_price"
                        android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/availableSit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/available_sit"
                        android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sitWant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/no_of_sit"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/price"
                        android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/comments"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/driver_requirements"
                android:layout_marginTop="@dimen/mp_5"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginTop="@dimen/mp_5">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <CheckBox
                        android:id="@+id/cbLuggageAllow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/luggage_allowed"
                        android:clickable="false"/>
                    <CheckBox
                        android:id="@+id/cbSmockingAllow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/smocking_allowed"
                        android:clickable="false"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <CheckBox
                        android:id="@+id/cbFoodAllow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/food_allowed"
                        android:clickable="false"/>
                    <CheckBox
                        android:id="@+id/cbMusicAllow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/music_allowed"
                        android:clickable="false"/>
                </LinearLayout>
                <CheckBox
                    android:id="@+id/cbPetAllow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pets_allowed"
                    android:clickable="false"/>
            </LinearLayout>

            <TextView
                android:id="@+id/stopOverHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop_over"
                android:layout_marginTop="@dimen/mp_5"/>

            <LinearLayout
                android:id="@+id/llStopOverListMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginTop="@dimen/mp_5">

            </LinearLayout>

            <Button
                android:id="@+id/buttonShowInterest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interested"
                android:background="@color/colorAccent"
                android:textColor="@color/colorButtonText"
                android:layout_margin="@dimen/mp_10"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
